--- a/README.Rmd
+++ b/README.Rmd
@@ -29,42 +29,26 @@ You can install the released version of msaeRB from [CRAN](https://CRAN.R-projec
 install.packages("msaeRB")
 ```
 
-## Example
+## Atuhors
 
-Example for univariate:
+Zenda Oka Briantiko, Azka Ubaidillah
 
-```{r example}
-library(msaeRB)
-# Using parameter 'data'
-data("datamsaeRB")
+## Maintainer
 
-# Estimation
-est_sae = est_saeRB(Y1 ~ X1 + X2, v1, w1, data = datamsaeRB)
+Zenda Oka Briantiko <221710087@stis.ac.id>
 
-# MSE
-mse_sae = mse_saeRB(Y1 ~ X1 + X2, v1, w1, data = datamsaeRB)
+## Functions
 
-# Show the result of est_sae
-est_sae
-```
+* est_saeRB : Produces EBLUPs Ratio Benchmarking based on a Univariate Fay-Herriot (Model 1)
+* mse_saeRB : Parametric Bootstrap Mean Squared Error Estimators of Ratio Benchmarking for Univariate Small Area Estimation
+* est_msaeRB : Produces EBLUPs Ratio Benchmarking based on a Multivariate Fay-Herriot (Model 1)
+* mse_msaeRB : Parametric Bootstrap Mean Squared Error Estimators of Ratio Benchmarking for Multivariate Small Area Estimation
 
-Example for multivariate:
-```{r}
-library(msaeRB)
-# Without parameter 'data'
-Fo = list(f1 = datamsaeRB$Y1 ~ datamsaeRB$X1 + datamsaeRB$X2,
-          f2 = datamsaeRB$Y2 ~ datamsaeRB$X1 + datamsaeRB$X2,
-          f3 = datamsaeRB$Y3 ~ datamsaeRB$X1 + datamsaeRB$X2)
-vardir = datamsaeRB[, c("v1", "v12", "v13", "v2", "v23", "v3")]
-weight = datamsaeRB[, c("w1", "w2", "w3")]
+## References
 
-# Estimation
-est_msae = est_msaeRB(Fo, vardir, weight)
-
-# MSE
-mse_msae = mse_msaeRB(Fo, vardir, weight)
-
-# Show the result of MSE
-mse_msae
-```
-
+* Rao, J.N.K & Molina. (2015). Small Area Estimation 2nd Edition. New York: John Wiley and Sons, Inc.
+* Benavent, Roberto & Morales, Domingo. (2015). Multivariate Fay-Herriot models for small area estimation. Computational Statistics and Data Analysis 94 2016 372-390. DOI: 10.1016/j.csda.2015.07.013.
+* Ubaidillah, Azka et al. (2019). Multivariate Fay-Herriot models for small area estimation with application to household consumption per capita expenditure in Indonesia. Journal of Applied Statistics. 46:15. 2845-2861. DOI: 10.1080/02664763.2019.1615420.
+* Datta, G.S., Day, B., and Maiti, T. (1998), Multivariate Bayesian Small Area Estimation: An Application to Survey and Satellite Data, Sankhy¯a, Series A, 60, 1–19. 
+* Wang, J., Fuller, W.A., and Qu, Y. (2008). Small Area Estimation Under Restriction, Survey Methodology, 34, 29–36 
+* Małgorzata Karolina Krzciu (2017). On the Simulation Study of Jackknife and Bootstrap MSE Estimators of a Domain Mean Predictor for Fay‑Herriot Model. DOI: http://dx.doi.org/10.18778/0208‑6018.331.11
